2000-03-14  Akim Demaille  <akim@epita.fr>

	* autoheader.sh: Use run_m4f, not run_m4.

2000-03-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* tests/actest.m4 (AC_ENV_SAVE): Don't consider RANDOM and LINENO
	which some shells update.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_ARG_ENABLE, AC_ARG_WITH): No use for @%:@ here,
	no need to over quote $1 in the comments.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Replace some ifelse with ifval or m4_default, or
	even nothing when not needed.
	* acspecific.m4: Likewise.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE): Insert the Autoconf version in
	config.log, and the command line which ran configure.
	Kill a couple of useless quote around dollars.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE): Kill a changequote in the
	building of `ac_configure_args'.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_DIVERT): Rename _AC_DIVERT.
	(AC_DIVERT): New macro.
	Spread its use where better than a pair of AC_DIVERT_PUSH/POP.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_BINSH): Remove, useless now that...
	(AC_REVISION): Require AC_INIT, not _AC_INIT_BINSH.
	(AC_INIT): Do what _AC_INIT_BINSH used to.
	Don't require _AC_INIT_VERSION, just call it.
	Rename as _AC_INIT.
	(AC_INIT): New macro, single expansion wrapper around _AC_INIT.
	(_AC_COPYRIGHT_SEPARATOR): New.
	(AC_COPYRIGHT): Use it.
	Require AC_INIT, not _AC_INIT_VERSION.
	* doc/autoconf.texi (Versions): Promote as first section of
	`Setup'.
	Rename as `Notices'.
	Document AC_COPYRIGHT.
	Don't give false reasons for placing AC_REVISION before AC_INIT,
	the place no longer matters.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (trace_m4::smash): Double quote, we don't want the
	result to be evaluated.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: s/@%:@line __oline__/#line __oline__/g. __oline__